[gd_scene load_steps=4 format=3 uid="uid://cblmla1tsx671"]

[ext_resource type="PackedScene" uid="uid://b7w4l8gi8wh08" path="res://appearance/simple_a/simple_a_cell_b.tscn" id="1_i2efr"]
[ext_resource type="Script" uid="uid://c5rhmurx6fsqb" path="res://main/genomes_panel/cell_appearance_container.gd" id="1_u5hlf"]

[sub_resource type="Environment" id="Environment_yotkh"]
background_mode = 1
background_color = Color(0, 0, 0, 0)
background_energy_multiplier = 1.53
ambient_light_source = 1
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.65

[node name="CellAppearanceContainer" type="SubViewportContainer"]
custom_minimum_size = Vector2(50, 50)
size_flags_horizontal = 4
size_flags_vertical = 4
stretch = true
script = ExtResource("1_u5hlf")

[node name="CellAppearance" type="SubViewport" parent="."]
unique_name_in_owner = true
own_world_3d = true
transparent_bg = true
handle_input_locally = false
msaa_3d = 3
screen_space_aa = 1
scaling_3d_scale = 2.0
anisotropic_filtering_level = 4
size = Vector2i(50, 50)
render_target_update_mode = 4

[node name="Node3D" type="Node3D" parent="CellAppearance"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="CellAppearance/Node3D"]
environment = SubResource("Environment_yotkh")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="CellAppearance/Node3D/WorldEnvironment"]
transform = Transform3D(0.962956, -0.0971468, -0.251553, 0.269659, 0.346912, 0.898296, 0, -0.932853, 0.360257, -3.32323, 0, 10.9019)

[node name="SpotLight3D" type="SpotLight3D" parent="CellAppearance/Node3D/WorldEnvironment"]
transform = Transform3D(0.823027, 0.1866, 0.536476, 0, 0.944497, -0.328521, -0.568002, 0.270381, 0.777347, 5.34054, -4.07409, 5.11542)
light_energy = 1.571
spot_range = 45.878

[node name="CellAppearanceHolder" type="Node3D" parent="CellAppearance/Node3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)

[node name="SimpleACellB" parent="CellAppearance/Node3D/CellAppearanceHolder" instance=ExtResource("1_i2efr")]

[node name="Camera3D" type="Camera3D" parent="CellAppearance/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.633)
